Visualizations were saved

--- a/notebooks/draft-analysis.ipynb
+++ b/notebooks/draft-analysis.ipynb
@@ -434,7 +434,6 @@
     ").encode(\n",
     "    text='count(primary_type)'\n",
     ")\n",
-    "\n",
     "chart_1+txt_1"
    ]
   },
@@ -446,7 +445,7 @@
    "source": [
     "#Barchart that counts types of crime and shows if an arrest was made\n",
     "\n",
-    "chart = alt.Chart(df).mark_bar().encode(\n",
+    "chart_11 = alt.Chart(df).mark_bar().encode(\n",
     "    x=alt.X(\"primary_type\", sort=\"-y\",\n",
     "            axis=alt.Axis(title=\"district\",\n",
     "\n",
@@ -462,14 +461,14 @@
     "    height=400\n",
     ")\n",
     "\n",
-    "text = chart.mark_text(\n",
+    "text = chart_11.mark_text(\n",
     "    baseline = 'middle',\n",
     "    dy= - 15\n",
     ").encode(\n",
     "    text='count(primary_type)'\n",
     ")\n",
     "\n",
-    "chart+text"
+    "chart_11+text"
    ]
   },
   {
@@ -496,7 +495,7 @@
     "    height=400\n",
     ")\n",
     "\n",
-    "text_10 = chart.mark_text(\n",
+    "text_10 = chart_10.mark_text(\n",
     "    baseline = 'middle',\n",
     "    dy= - 15\n",
     ").encode(\n",
@@ -526,15 +525,7 @@
     "    width=1000,\n",
     "    height=400\n",
     ")\n",
-    "\n",
-    "txt = ch.mark_text(\n",
-    "    baseline='middle',\n",
-    "    dy=30\n",
-    ").encode(\n",
-    "    text='count(primary_type)'\n",
-    ")\n",
-    "\n",
-    "ch + txt"
+    "ch"
    ]
   },
   {
@@ -684,8 +675,8 @@
     "    width=1000,\n",
     "    height=1000\n",
     ")\n",
-    "\n",
-    "choro + p"
+    "chart = choro + p\n",
+    "chart"
    ]
   },
   {
@@ -697,10 +688,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 78,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from altair_saver import save\n",
+    "import time\n",
+    "timestr = time.strftime(\"%Y%m%d-%H%M%S\")\n",
+    "save(chart, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_disctrict_map\"+timestr+\".html\")\n",
+    "save(chart_5, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_per_hour\"+timestr+\".html\")\n",
+    "save(chart_4, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_per_month\"+timestr+\".html\")\n",
+    "save(chart_3, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_per_year\"+timestr+\".html\")\n",
+    "save(chart_2, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_crimes_in_wards\"+timestr+\".html\")\n",
+    "save(ch, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_per_district\"+timestr+\".html\")\n",
+    "save(chart_10+text_10, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_domestic_crime\"+timestr+\".html\")\n",
+    "save(chart_11+text, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_arrest\"+timestr+\".html\")\n",
+    "save(chart_1+txt_1, \"C:/Users/esad-/Documents/GitHub/project-dst/reports/visualizations/draft_per_type\"+timestr+\".html\")\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
   },
   {
    "cell_type": "markdown",
