--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -36,13 +36,350 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from pathlib import Path\n",
+    "\n",
+    "PARENT_PATH = str(Path().resolve().parent) + \"/\"\n",
+    "PATH = \"data/\"\n",
+    "SUBPATH = \"processed/\"\n",
+    "FILE = \"chicago_crimes-20230125-1544\"\n",
+    "FORMAT = \".csv\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import altair as alt\n",
+    "from vega_datasets import data\n",
+    "alt.data_transformers.disable_max_rows()\n",
+    "\n",
+    "import warnings\n",
+    "warnings.simplefilter(action='ignore', category=FutureWarning)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "df = pd.read_csv(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Welches Verbrechen wie oft vorkam\n",
+    "df.primary_type.value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"primary_type\"].describe()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "var_list = ['primary_type']\n",
+    "\n",
+    "source = df[var_list]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Barchart with different types of crime\n",
+    "\n",
+    "ch = alt.Chart(source).mark_bar().encode(\n",
+    "    x=alt.X(\"primary_type\", sort=\"-y\",\n",
+    "            axis=alt.Axis(title=\"district\",\n",
+    "\n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)', \n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                        titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crimes per type',\n",
+    "    width=1000,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "txt = ch.mark_text(\n",
+    "    baseline = 'middle',\n",
+    "    dy= - 15\n",
+    ").encode(\n",
+    "    text='count(primary_type)'\n",
+    ")\n",
+    "\n",
+    "ch+txt"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Barchart with different types of crime\n",
+    "\n",
+    "ch = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('count(primary_group)', \n",
+    "            axis=alt.Axis(title = \"COUNT\", \n",
+    "                        titleAnchor=\"end\")),\n",
+    "    y=alt.Y(\"primary_group\", sort=\"y\",\n",
+    "            axis=alt.Axis(title=\"PRIMARY GROUP\",\n",
+    "                          titleAnchor=\"start\")),\n",
+    "\n",
+    ").properties(\n",
+    "    title='Count of commited crimes per type',\n",
+    "    width=1000,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "ch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('district',\n",
+    "            bin=alt.BinParams(maxbins=50),\n",
+    "            axis=alt.Axis(title=\"district\",  \n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the districts',\n",
+    "    width=1000,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "text = chart.mark_text(\n",
+    "    baseline='middle',\n",
+    "    dy=30\n",
+    ").encode(\n",
+    "    text='count(primary_type)'\n",
+    ")\n",
+    "\n",
+    "chart + text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart_2 = alt.Chart(df[~df['ward'].isna()]).mark_bar(size=20).encode(\n",
+    "    x=alt.X('ward:N',\n",
+    "            sort=\"-y\",\n",
+    "            axis=alt.Axis(title=\"Ward\",\n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the wards',\n",
+    "    width=1500,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chart_2.configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart_3 = alt.Chart(df).mark_bar().encode(\n",
+    "    y=alt.Y('year:N',\n",
+    "            axis=alt.Axis(title=\"Year\",\n",
+    "                          titleAnchor=\"start\")),\n",
+    "    x=alt.X('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crime per year',\n",
+    "    width=400,\n",
+    "    height=200\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chart_3.configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart_4 = alt.Chart(df).mark_bar(size=30).encode(\n",
+    "    x=alt.X('month:N',\n",
+    "            axis=alt.Axis(title=\"Month\",\n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crime per month',\n",
+    "    width=500,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chart_4.configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "chart_5 = alt.Chart(df).mark_bar(size=15).encode(\n",
+    "    x=alt.X('hour:N',\n",
+    "            axis=alt.Axis(title=\"Hour\",\n",
+    "                          titleAnchor=\"start\",\n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    ").properties(\n",
+    "    title='Count of commited crime per hour',\n",
+    "    width=600,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chart_5.configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ")"
+   ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "## Visualizations"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Geopandas library to work with Chicago map\n",
+    "import geopandas as gpd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "PARENT_PATH = str(Path().resolve().parent) + \"/\"\n",
+    "PATH = \"data/\"\n",
+    "SUBPATH = \"external/\"\n",
+    "FILE = \"wards\"\n",
+    "FORMAT = \".shp\"\n",
+    "\n",
+    "gdf = gpd.read_file(PARENT_PATH + PATH + SUBPATH + FILE + FORMAT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Map of Chicago with Crimes as Dots on the Map\n",
+    "\n",
+    "choro = alt.Chart(gdf).mark_geoshape(\n",
+    "    fill=\"lightgrey\", stroke='grey'\n",
+    ").encode()\n",
+    "\n",
+    "\n",
+    "p = alt.Chart(df).mark_circle().encode(\n",
+    "    longitude='longitude',\n",
+    "    latitude='latitude',\n",
+    "    size=alt.value(10)\n",
+    ").properties(\n",
+    "    title=\"Location of crimes in Chicago City\",\n",
+    "    width=1000,\n",
+    "    height=1000\n",
+    ")\n",
+    "\n",
+    "choro + p"
    ]
   },
   {
@@ -95,18 +432,26 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.6 64-bit",
+   "display_name": "dst",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.6"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "31f2aee4e71d21fbe5cf8b01ff0e069b9275f58929596ceb00d14d90e3e16cd6"
+    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
    }
   }
  },
