--- a/references/project-proposal.ipynb
+++ b/references/project-proposal.ipynb
@@ -589,6 +589,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "gdf.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "#Map of Chicago with Crimes as Dots on the Map\n",
     "\n",
     "choro = alt.Chart(gdf).mark_geoshape(\n",
@@ -599,7 +608,7 @@
     "p = alt.Chart(df).mark_circle().encode(\n",
     "    longitude='longitude',\n",
     "    latitude='latitude',\n",
-    "    size=alt.value(10),\n",
+    "    size=alt.value(10)\n",
     ").properties(\n",
     "    title=\"Location of crimes in Chicago City\",\n",
     "    width=1000,\n",
