--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -183,29 +183,73 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart = alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X('district',\n",
-    "            bin=alt.BinParams(maxbins=50),\n",
-    "            axis=alt.Axis(title=\"district\",  \n",
+    "district = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X(\"district:N\",\n",
+    "    sort=\"-y\",\n",
+    "    axis=alt.Axis(title=\"DISTRICT\",  \n",
     "                          titleAnchor=\"start\", \n",
     "                          labelAngle=0)),\n",
-    "    y=alt.Y('count(primary_type)',\n",
-    "            axis=alt.Axis(title = \"Count\", \n",
-    "                          titleAnchor=\"end\")),\n",
+    "    y=alt.Y(\"count(primary_type)\")\n",
     ").properties(\n",
     "    title='Count of commited crime in the districts',\n",
     "    width=1000,\n",
     "    height=400\n",
     ")\n",
     "\n",
-    "text = chart.mark_text(\n",
-    "    baseline='middle',\n",
-    "    dy=30\n",
-    ").encode(\n",
-    "    text='count(primary_type)'\n",
+    "\n",
+    "\n",
+    "district"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#districts with most crime\n",
+    "\n",
+    "df[\"district\"].value_counts().nlargest(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "district_5 = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X(\"district:N\",\n",
+    "    sort=\"-y\",\n",
+    "    axis=alt.Axis(title=\"DISTRICT\",  \n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y(\"count(primary_type):Q\"),\n",
+    "    color=alt.condition(\n",
+    "        alt.FieldOneOfPredicate('district', [11, 6, 8, 1, 18]),  # If the district is 11 this test returns True,\n",
+    "        alt.value('orange'),     # which sets the bar orange.\n",
+    "        alt.value('steelblue')   # And if it's not true it sets the bar steelblue.\n",
+    "    )\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the districts',\n",
+    "    width=1000,\n",
+    "    height=400\n",
     ")\n",
     "\n",
-    "chart + text"
+    "\n",
+    "\n",
+    "district_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#wards with most crime\n",
+    "\n",
+    "df[\"ward\"].value_counts().nlargest(5)"
    ]
   },
   {
@@ -223,6 +267,11 @@
     "    y=alt.Y('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"Count\", \n",
     "                          titleAnchor=\"end\")),\n",
+    "                          color=alt.condition(\n",
+    "        alt.FieldOneOfPredicate('ward', [42.0, 28.0, 24.0, 27.0, 6.0]),  # If the district is 11 this test returns True,\n",
+    "        alt.value('orange'),     # which sets the bar orange.\n",
+    "        alt.value('steelblue')   # And if it's not true it sets the bar steelblue.\n",
+    "    )\n",
     ").properties(\n",
     "    title='Count of commited crime in the wards',\n",
     "    width=1500,\n",
@@ -231,6 +280,36 @@
     "\n",
     "\n",
     "chart_2.configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "ward_5 = alt.Chart(df[~df['ward'].isna()]).mark_bar(size=20).encode(\n",
+    "    x=alt.X('ward:N',\n",
+    "            sort=\"-y\",\n",
+    "            axis=alt.Axis(title=\"Ward\",\n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\"))\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the wards',\n",
+    "    width=1500,\n",
+    "    height=400\n",
+    ")\n",
+    "\n",
+    "\n",
+    "ward_5.configure_title(\n",
     "    fontSize=16,\n",
     "    font='Arial',\n",
     "    color='black',\n",
