--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -183,6 +183,117 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#districts crosstab\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"district\"], df[\"district\"],\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    "    rownames=[\"District\"],\n",
+    "    colnames=[\"Ergebnis\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"district\"].value_counts(normalize=True) * 100"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#arrest crime crosstab in percent\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"primary_type\"], df[\"arrest\"],\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    "    rownames=[\"Crime\"],\n",
+    "    colnames=[\"Arrest\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#arrest crime crosstab in total\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"primary_type\"], df[\"arrest\"],\n",
+    "    margins=True,\n",
+    "    normalize=False,\n",
+    "    rownames=[\"Crime\"],\n",
+    "    colnames=[\"Arrest\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#arrest homocide crosstab\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"primary_type\"] ==\"homicide\" , df[\"arrest\"],\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    "    rownames=[\"Crime\"],\n",
+    "    colnames=[\"Arrest\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#arrest group crosstab\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"primary_group\"], df[\"arrest\"],\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    "    rownames=[\"Group\"],\n",
+    "    colnames=[\"Arrest\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "district = alt.Chart(df).mark_bar().encode(\n",
     "    x=alt.X(\"district:N\",\n",
     "    sort=\"-y\",\n",
