--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -244,7 +244,7 @@
     "    normalize=False,\n",
     "    rownames=[\"Crime\"],\n",
     "    colnames=[\"Arrest\"]\n",
-    "    )* 100\n",
+    "    )\n",
     "\n",
     "\n",
     "cross_table"
@@ -282,6 +282,43 @@
     "    normalize=True,\n",
     "    rownames=[\"Group\"],\n",
     "    colnames=[\"Arrest\"]\n",
+    "    )* 100\n",
+    "\n",
+    "\n",
+    "cross_table"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "homicide = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X(\"count(primary_type)\"),\n",
+    "    y=alt.Y(\"arrest\")\n",
+    ").transform_filter(\n",
+    "alt.FieldEqualPredicate(field='primary_type', equal=\"homicide\")\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "homicide"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#primary_type and district crosstab\n",
+    "\n",
+    "cross_table = pd.crosstab(df[\"primary_type\"], df[\"district\"],\n",
+    "    margins=True,\n",
+    "    normalize=True,\n",
+    "    rownames=[\"Type\"],\n",
+    "    colnames=[\"District\"]\n",
     "    )* 100\n",
     "\n",
     "\n",
@@ -426,6 +463,16 @@
     "    color='black',\n",
     "    anchor='start'\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#block/streets with most crimes\n",
+    "df[\"block\"].value_counts().nlargest(10)"
    ]
   },
   {
