--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -183,7 +183,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#districts crosstab\n",
+    "#districts crosstab // nicht übersichtlich\n",
     "\n",
     "cross_table = pd.crosstab(df[\"district\"], df[\"district\"],\n",
     "    margins=True,\n",
@@ -406,6 +406,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "selection = alt.selection_multi(fields=['ward'])\n",
+    "\n",
     "chart_2 = alt.Chart(df[~df['ward'].isna()]).mark_bar(size=20).encode(\n",
     "    x=alt.X('ward:N',\n",
     "            sort=\"-y\",\n",
@@ -415,15 +417,13 @@
     "    y=alt.Y('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"Count\", \n",
     "                          titleAnchor=\"end\")),\n",
-    "                          color=alt.condition(\n",
-    "        alt.FieldOneOfPredicate('ward', [42.0, 28.0, 24.0, 27.0, 6.0]),  # If the district is 11 this test returns True,\n",
-    "        alt.value('orange'),     # which sets the bar orange.\n",
-    "        alt.value('steelblue')   # And if it's not true it sets the bar steelblue.\n",
-    "    )\n",
+    "    tooltip=\"ward\"\n",
     ").properties(\n",
     "    title='Count of commited crime in the wards',\n",
     "    width=1500,\n",
     "    height=400\n",
+    ").add_selection(\n",
+    "    selection\n",
     ")\n",
     "\n",
     "\n",
@@ -449,7 +449,12 @@
     "                          labelAngle=0)),\n",
     "    y=alt.Y('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"Count\", \n",
-    "                          titleAnchor=\"end\"))\n",
+    "                          titleAnchor=\"end\")),\n",
+    "            color=alt.condition(\n",
+    "        alt.FieldOneOfPredicate('ward', [42.0, 28.0, 24.0, 27.0, 6.0]),  # If the district is 11 this test returns True,\n",
+    "        alt.value('orange'),     # which sets the bar orange.\n",
+    "        alt.value('steelblue')   # And if it's not true it sets the bar steelblue.\n",
+    "    )              \n",
     ").properties(\n",
     "    title='Count of commited crime in the wards',\n",
     "    width=1500,\n",
@@ -509,7 +514,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart_4 = alt.Chart(df).mark_bar(size=30).encode(\n",
+    "chart_4 = alt.Chart(df).mark_line().encode(\n",
     "    x=alt.X('month:N',\n",
     "            axis=alt.Axis(title=\"Month\",\n",
     "                          titleAnchor=\"start\", \n",
@@ -517,12 +522,12 @@
     "    y=alt.Y('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"Count\", \n",
     "                          titleAnchor=\"end\")),\n",
+    "    color=alt.Color(\"year:N\", legend=alt.Legend(title=\"YEAR\"))                  \n",
     ").properties(\n",
     "    title='Count of commited crime per month',\n",
     "    width=500,\n",
     "    height=400\n",
     ")\n",
-    "\n",
     "\n",
     "chart_4.configure_title(\n",
     "    fontSize=16,\n",
@@ -538,7 +543,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "chart_5 = alt.Chart(df).mark_bar(size=15).encode(\n",
+    "chart_5 = alt.Chart(df).mark_line().encode(\n",
     "    x=alt.X('hour:N',\n",
     "            axis=alt.Axis(title=\"Hour\",\n",
     "                          titleAnchor=\"start\",\n",
@@ -546,6 +551,7 @@
     "    y=alt.Y('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"Count\", \n",
     "                          titleAnchor=\"end\")),\n",
+    "    color=alt.Color(\"year:N\", legend=alt.Legend(title=\"YEAR\"))\n",
     ").properties(\n",
     "    title='Count of commited crime per hour',\n",
     "    width=600,\n",
@@ -558,6 +564,70 @@
     "    font='Arial',\n",
     "    color='black',\n",
     "    anchor='start'\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# select a point for which to provide details-on-demand\n",
+    "label = alt.selection_single(\n",
+    "    encodings=['x'], # limit selection to x-axis value\n",
+    "    on='mouseover',  # select on mouseover events\n",
+    "    nearest=True,    # select data point nearest the cursor\n",
+    "    empty='none'     # empty selection includes no data points\n",
+    ")\n",
+    "\n",
+    "chart_5 = alt.Chart().mark_line().encode(\n",
+    "    x=alt.X('hour:N',\n",
+    "            axis=alt.Axis(title=\"Hour\",\n",
+    "                          titleAnchor=\"start\",\n",
+    "                          labelAngle=0)),\n",
+    "    y=alt.Y('count(primary_type)',\n",
+    "            axis=alt.Axis(title = \"Count\", \n",
+    "                          titleAnchor=\"end\")),\n",
+    "    color=alt.Color(\"year:N\", legend=alt.Legend(title=\"YEAR\"))\n",
+    ")\n",
+    "\n",
+    "\n",
+    "alt.layer(\n",
+    "    chart_5,\n",
+    "    alt.Chart().mark_rule(color='lightgrey').encode(\n",
+    "        x='hour:N'\n",
+    "    ).transform_filter(label),\n",
+    "\n",
+    "chart_5.mark_circle().encode(\n",
+    "        opacity=alt.condition(label, alt.value(1), alt.value(0))\n",
+    "    ).add_selection(label),\n",
+    "\n",
+    "chart_5.mark_text(align='left', dx=5, dy=-5, stroke='white', strokeWidth=2).encode(\n",
+    "        text='count(primary_type)'\n",
+    "    ).transform_filter(label),\n",
+    "\n",
+    "chart_5.mark_text(align='left', dx=5, dy=-5).encode(\n",
+    "        text='count(primary_type)'\n",
+    "    ).transform_filter(label),\n",
+    "    data=df\n",
+    ").properties(\n",
+    "    width=800,\n",
+    "    height=600\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# nicht brauchbar wegen group_3\n",
+    "alt.Chart(df).mark_area().encode(\n",
+    "    x=\"hour:N\",\n",
+    "    y=alt.Y(\"count(primary_group)\", stack=\"normalize\"),\n",
+    "    color=\"primary_group:N\"\n",
     ")"
    ]
   },
@@ -606,7 +676,7 @@
     ").encode()\n",
     "\n",
     "\n",
-    "p = alt.Chart(df).mark_circle().encode(\n",
+    "p = alt.Chart(df).mark_circle(opacity=0.2).encode(\n",
     "    longitude='longitude',\n",
     "    latitude='latitude',\n",
     "    size=alt.value(10)\n",
