--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -210,7 +210,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#remove district 31 becoause of wrong/irrelevant data\n",
+    "df.drop(df[df['district'] == 31].index, inplace = True)"
+   ]
   },
   {
    "cell_type": "code",
@@ -299,7 +302,8 @@
     "    y=alt.Y(\"arrest\")\n",
     ").transform_filter(\n",
     "alt.FieldEqualPredicate(field='primary_type', equal=\"homicide\")\n",
-    ")\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
     "\n",
     "\n",
     "\n",
@@ -336,17 +340,59 @@
     "    sort=\"-y\",\n",
     "    axis=alt.Axis(title=\"DISTRICT\",  \n",
     "                          titleAnchor=\"start\", \n",
-    "                          labelAngle=0)),\n",
+    "                          labelAngle=0, grid=False)),\n",
     "    y=alt.Y(\"count(primary_type)\")\n",
     ").properties(\n",
     "    title='Count of commited crime in the districts',\n",
     "    width=1000,\n",
     "    height=400\n",
-    ")\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
     "\n",
     "\n",
     "\n",
     "district"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# filter per district\n",
+    "districts = df['district'].unique() # get unique field values\n",
+    "districts = list(filter(lambda d: d is not None, districts)) # filter out None values\n",
+    "districts.sort() # sort alphabetically\n",
+    "\n",
+    "selectDistrict = alt.selection_single(\n",
+    "    name='Select', # name the selection 'Select'\n",
+    "    fields=['district'], # limit selection to the Major_Genre field\n",
+    "    init={'district': districts[0]}, # use first genre entry as initial value\n",
+    "    bind=alt.binding_select(options=districts) # bind to a menu of unique genre values\n",
+    ")\n",
+    "\n",
+    "\n",
+    "chart = alt.Chart(df).mark_bar().add_selection(\n",
+    "    selectDistrict\n",
+    ").encode(\n",
+    "    x=alt.X(\"district:N\",\n",
+    "    axis=alt.Axis(title=\"DISTRICT\",  \n",
+    "                          titleAnchor=\"start\", \n",
+    "                          labelAngle=0, grid=False)),\n",
+    "    y=alt.Y(\"count(primary_type)\"),\n",
+    "    opacity=alt.condition(selectDistrict, alt.value(1.0), alt.value(0.50)),\n",
+    "    tooltip=[\"district\", \"count(primary_type)\"]\n",
+    ").properties(\n",
+    "    title='Count of commited crime in the districts',\n",
+    "    width=1000,\n",
+    "    height=400\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
+    "\n",
+    "\n",
+    "\n",
+    "chart"
    ]
   },
   {
@@ -382,11 +428,34 @@
     "    title='Count of commited crime in the districts',\n",
     "    width=1000,\n",
     "    height=400\n",
-    ")\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
     "\n",
     "\n",
     "\n",
     "district_5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#primary_type per district\n",
+    "\n",
+    "\n",
+    "alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('count(primary_type)', stack=\"normalize\"),\n",
+    "    y='district:N',\n",
+    "    color='primary_type',\n",
+    "    tooltip=[\"primary_type\"]\n",
+    ").properties(\n",
+    "    title='Distribution of primary_type per district',\n",
+    "    width=1000,\n",
+    "    height=800\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
    ]
   },
   {
@@ -432,7 +501,8 @@
     "    font='Arial',\n",
     "    color='black',\n",
     "    anchor='start'\n",
-    ")"
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
    ]
   },
   {
@@ -525,9 +595,10 @@
     "    color=alt.Color(\"year:N\", legend=alt.Legend(title=\"YEAR\"))                  \n",
     ").properties(\n",
     "    title='Count of commited crime per month',\n",
-    "    width=500,\n",
+    "    width=600,\n",
     "    height=400\n",
-    ")\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
     "\n",
     "chart_4.configure_title(\n",
     "    fontSize=16,\n",
@@ -556,7 +627,8 @@
     "    title='Count of commited crime per hour',\n",
     "    width=600,\n",
     "    height=400\n",
-    ")\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)\n",
     "\n",
     "\n",
     "chart_5.configure_title(\n",
@@ -614,7 +686,8 @@
     ").properties(\n",
     "    width=800,\n",
     "    height=600\n",
-    ")"
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
    ]
   },
   {
@@ -628,7 +701,11 @@
     "    x=\"hour:N\",\n",
     "    y=alt.Y(\"count(primary_group)\", stack=\"normalize\"),\n",
     "    color=\"primary_group:N\"\n",
-    ")"
+    ").properties(\n",
+    "    width=800,\n",
+    "    height=600\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
    ]
   },
   {
