--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -161,20 +161,26 @@
     "#Barchart with different types of crime\n",
     "\n",
     "ch = alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X('count(primary_group)', \n",
+    "    y=alt.Y('count(primary_group)', \n",
     "            axis=alt.Axis(title = \"COUNT\", \n",
     "                        titleAnchor=\"end\")),\n",
-    "    y=alt.Y(\"primary_group\", sort=\"y\",\n",
+    "    x=alt.X(\"primary_group\", sort=\"y\",\n",
     "            axis=alt.Axis(title=\"PRIMARY GROUP\",\n",
     "                          titleAnchor=\"start\")),\n",
     "\n",
     ").properties(\n",
     "    title='Count of commited crimes per type',\n",
-    "    width=1000,\n",
+    "    width=800,\n",
     "    height=400\n",
     ")\n",
+    "txt = ch.mark_text(\n",
+    "    baseline = 'middle',\n",
+    "    dy = -15\n",
+    ").encode(\n",
+    "    text='count(primary_type)'\n",
+    ")\n",
     "\n",
-    "ch"
+    "ch + txt"
    ]
   },
   {
@@ -341,7 +347,8 @@
     "    axis=alt.Axis(title=\"DISTRICT\",  \n",
     "                          titleAnchor=\"start\", \n",
     "                          labelAngle=0, grid=False)),\n",
-    "    y=alt.Y(\"count(primary_type)\")\n",
+    "    y=alt.Y(\"count(primary_type)\"),\n",
+    "    tooltip=['district', alt.Tooltip('count(primary_type)', title='count')]\n",
     ").properties(\n",
     "    title='Count of commited crime in the districts',\n",
     "    width=1000,\n",
@@ -749,14 +756,16 @@
     "#Map of Chicago with Crimes as Dots on the Map\n",
     "\n",
     "choro = alt.Chart(gdf).mark_geoshape(\n",
-    "    fill=\"lightgrey\", stroke='grey'\n",
+    "    fill=\"black\", stroke='white'\n",
     ").encode()\n",
     "\n",
     "\n",
-    "p = alt.Chart(df).mark_circle(opacity=0.2).encode(\n",
+    "p = alt.Chart(df).mark_square(opacity=0.3).encode(\n",
     "    longitude='longitude',\n",
     "    latitude='latitude',\n",
-    "    size=alt.value(10)\n",
+    "    size=alt.value(10),\n",
+    "    color=\"count(primary_type)\",\n",
+    "    tooltip=['ward', \"district\"]\n",
     ").properties(\n",
     "    title=\"Location of crimes in Chicago City\",\n",
     "    width=1000,\n",
@@ -835,7 +844,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
+    "hash": "d2f2d2082dad434e9227570e7053f7112e7d2c1e0982d1c6c76272549d47fe44"
    }
   }
  },
