--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -15,6 +15,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -28,7 +29,34 @@
     "\n",
     "It should also include some exploratory data analysis.\n",
     "\n",
-    "*All of the EDA won't fit in the paper, so focus on the EDA for the response variable and a few other interesting variables and relationships.*"
+    "*All of the EDA won't fit in the paper, so focus on the EDA for the response variable and a few other interesting variables and relationships.*\n",
+    "\n",
+    "\n",
+    "////\n",
+    "### Subject Matter:\n",
+    "\n",
+    "In the city of Chicago, many incidents/crimes happen every day, from minor thefts to murders. To reduce the violence in the city, the city wants to open a new crime prevention centre. Now the city is asking our team which crimes occur particularly frequently and where they happen. With this information, the **Crime Prevention Center** can be built in a particularly well-situated location. In addition, the specialised departments of the centre can be trained for the relevant criminal offences. This should make Chicago a safer city and ensure that measures are taken at an early stage to prevent crime.\n",
+    "\n",
+    "### Motivation:\n",
+    "\n",
+    "Various studies show that it is possible to prevent crime in cities with the help of specific actions. With the new **Crime Prevention Center**, we want to take a new approach in Chicago to prevent crime from the very beginning.\n",
+    "\n",
+    "* Crime Prevention and the Safer Cities Story\n",
+    "https://onlinelibrary.wiley.com/doi/10.1111/j.1468-2311.1993.tb00758.x\n",
+    "\n",
+    "* Social Crime Prevention in South Africa's Major Cities \n",
+    "http://csvr.org.za/docs/urbansafety/socialcrimeprevention.pdf\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "### General Question:\n",
+    "\n",
+    "Which kind of crimes happen particularly frequently and where do they happen?\n",
+    "\n",
+    "### Hypotheses:\n",
+    "\n",
+    "There are places (districts/blocks) in Chicago where the most (dangerous) crimes/incidents happen.\n"
    ]
   },
   {
@@ -716,6 +744,28 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#primary_type per district\n",
+    "\n",
+    "\n",
+    "alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('count(primary_group)', stack=\"normalize\"),\n",
+    "    y='district:N',\n",
+    "    color='primary_group',\n",
+    "    tooltip=[\"primary_group\"]\n",
+    ").properties(\n",
+    "    title='Distribution of primary_group per district',\n",
+    "    width=1000,\n",
+    "    height=800\n",
+    ").configure_axis(grid=False\n",
+    ").configure_view(strokeOpacity=0)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -844,7 +894,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "d2f2d2082dad434e9227570e7053f7112e7d2c1e0982d1c6c76272549d47fe44"
+    "hash": "afb2be5e0fa59e7cc779d156738954d1f1d32fb360bdb57d692d068a241e7d01"
    }
   }
  },
