--- a/notebooks/03-HP-data-preperation.ipynb
+++ b/notebooks/03-HP-data-preperation.ipynb
@@ -64,9 +64,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# delete domestic, beat, community_area, block\n",
+    "# delete domestic, beat, community_area, block, arrest_true, arrest_false\n",
     "\n",
-    "df.drop(['domestic', 'domestic__False', 'domestic__True', 'beat', 'community_area'], axis=1, inplace=True)"
+    "df.drop(['domestic', 'domestic__False', 'domestic__True', 'beat', 'community_area','arrest__False', 'arrest__True'], axis=1, inplace=True)"
    ]
   },
   {
@@ -110,6 +110,16 @@
    "source": [
     "#replace space with _\n",
     "df[\"block\"] = df[\"block\"].str.replace(\" \",\"_\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#remove district 31 becoause of wrong/irrelevant data\n",
+    "df.drop(df[df['district'] == 31].index, inplace = True)"
    ]
   },
   {
