--- a/reports/report.ipynb
+++ b/reports/report.ipynb
@@ -145,7 +145,7 @@
     "chart_3 = alt.Chart(df).mark_bar().encode(\n",
     "    y=alt.Y('year:N',\n",
     "            axis=alt.Axis(title=\"YEAR\",\n",
-    "                          titleAnchor=\"start\")),\n",
+    "                          titleY=15)),\n",
     "    x=alt.X('count(primary_type)',\n",
     "            axis=alt.Axis(title = \"COUNT\", \n",
     "                          titleAnchor=\"start\")),\n",
@@ -229,7 +229,7 @@
     "                          titleAnchor=\"start\",\n",
     "                          labelAngle=0)),\n",
     "    y=alt.Y('count(primary_type)',\n",
-    "            axis=alt.Axis(title = \"COUNTHO\", \n",
+    "            axis=alt.Axis(title = \"COUNT\", \n",
     "                          titleAnchor=\"end\")),\n",
     "    color=alt.Color(\"year:N\", legend=alt.Legend(title=\"YEAR\"))\n",
     ").properties(\n",
@@ -339,6 +339,24 @@
    "outputs": [],
    "source": [
     "df[\"block\"].value_counts().nlargest(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df[(df['district']==1) & (df['block'] == \"state_st\") & (df['primary_group'] == \"group_1\")]) #951 Fälle für state street in district 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "display(df[(df['block'] == \"ashland_ave\")]) # kedzie_ave 92, pulaski_rd 213, western_ave 27, madison_st 274"
    ]
   },
   {
@@ -582,24 +600,40 @@
    "source": [
     "#Map of Chicago with Crimes as Dots on the Map\n",
     "\n",
+    "\n",
     "choro = alt.Chart(gdf).mark_geoshape(\n",
-    "    fill=\"black\", stroke='white'\n",
+    "    fill=\"white\", stroke='grey'\n",
     ").encode()\n",
     "\n",
+    "input_radio = alt.binding_radio(options=['group_1','group_2','group_3'], name='Select_Group: ')\n",
+    "selection = alt.selection_single(fields=['primary_group'], bind=input_radio)\n",
     "\n",
     "p = alt.Chart(df).mark_square(opacity=0.3).encode(\n",
     "    longitude='longitude',\n",
     "    latitude='latitude',\n",
     "    size=alt.value(10),\n",
-    "    color=\"count(primary_group)\",\n",
-    "    tooltip=['ward', \"district\", \"block\"]\n",
+    "    color=\"primary_group:N\",\n",
+    "    tooltip=[\"district\", \"block\", \"primary_type\"]\n",
+    ").add_selection(\n",
+    "    selection\n",
+    ").transform_filter(\n",
+    "    selection\n",
     ").properties(\n",
     "    title=\"Location of crimes in Chicago City\",\n",
     "    width=1000,\n",
     "    height=1000\n",
     ")\n",
     "\n",
-    "choro + p"
+    "\n",
+    "layer = alt.layer(choro + p\n",
+    ").configure_title(\n",
+    "    fontSize=16,\n",
+    "    font='Arial',\n",
+    "    color='black',\n",
+    "    anchor='start'\n",
+    ").configure_axis(grid=False)\n",
+    "\n",
+    "layer\n"
    ]
   },
   {
@@ -732,12 +766,12 @@
     "order_crime = [\"theft\", \"assault_and_battery\",\"criminal_damage\", \"deceptive_practice\", \"burglary\", \"other_offense\", \"robbery_and_weapons\", \"narcotics\", \"homicide\", \"sexual_crime\"]\n",
     "\n",
     "alt.Chart(df).mark_bar().encode(\n",
-    "    x=alt.X('count(primary_type)', stack=\"normalize\", \n",
+    "    x=alt.X('count(primary_type)', stack=\"normalize\",\n",
     "    axis=alt.Axis(format=\"%\",title = \"PERCENT\", \n",
     "                          titleAnchor=\"start\")),\n",
     "    y=alt.Y('district:N',\n",
     "    axis=alt.Axis(title = \"DISTRICT\", \n",
-    "                          titleAnchor=\"start\")),\n",
+    "                          titleY=25)),\n",
     "    color=alt.Color('primary_type', sort=order_crime),\n",
     "    tooltip=[\"primary_type\", alt.Tooltip('count(primary_type)', title='count')]\n",
     ").properties(\n",
@@ -754,59 +788,57 @@
    ]
   },
   {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "In this graph we can see how the different types of crime are distributet in the districts. For example there were 2271 thefts in District 1."
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# filter per district\n",
-    "districts = df['district'].unique() # get unique field values\n",
-    "districts = list(filter(lambda d: d is not None, districts)) # filter out None values\n",
-    "districts.sort() # sort alphabetically\n",
+    "brush = alt.selection(type='interval')\n",
     "\n",
-    "selectDistrict = alt.selection_single(\n",
-    "    name='Select', # name the selection 'Select'\n",
-    "    fields=['district'], # limit selection to the Major_Genre field\n",
-    "    init={'district': districts[0]}, # use first genre entry as initial value\n",
-    "    bind=alt.binding_select(options=districts) # bind to a menu of unique genre values\n",
-    ")\n",
-    "\n",
-    "\n",
-    "chart = alt.Chart(df).mark_bar().add_selection(\n",
-    "    selectDistrict\n",
-    ").encode(\n",
+    "bar = alt.Chart(df).mark_bar().encode(\n",
     "    x=alt.X(\"district:N\",\n",
+    "    sort=\"-y\",\n",
     "    axis=alt.Axis(title=\"DISTRICT\",  \n",
     "                          titleAnchor=\"start\", \n",
     "                          labelAngle=0)),\n",
-    "    y=alt.Y(\"count(primary_type)\",\n",
+    "    y=alt.Y(\"count(primary_type):Q\",\n",
     "    axis=alt.Axis(title=\"COUNT\",  \n",
     "                          titleAnchor=\"end\")),\n",
-    "    opacity=alt.condition(selectDistrict, alt.value(1.0), alt.value(0.30)),\n",
-    "    tooltip=[\"district\", \"count(primary_type)\"]\n",
+    "    tooltip=[alt.Tooltip('count(primary_type)', title='count')]\n",
+    ").add_selection(\n",
+    "    brush\n",
     ").properties(\n",
-    "    title='Count of commited crime per district',\n",
+    "    title='Count of commited crime in the districts',\n",
     "    width=1000,\n",
     "    height=400\n",
-    ").configure_title(\n",
+    ")\n",
+    "\n",
+    "\n",
+    "\n",
+    "bars = alt.Chart(df).mark_bar().encode(\n",
+    "    x=alt.X('count(primary_type)', stack=\"normalize\",\n",
+    "    axis=alt.Axis(format=\"%\",title = \"PERCENT\", \n",
+    "                          titleAnchor=\"start\")),\n",
+    "    y=alt.Y('district:N',\n",
+    "    axis=alt.Axis(title=\"DISTRICT\",  \n",
+    "                          titleY=25)),\n",
+    "    color=alt.Color('primary_type', sort=order_crime, \n",
+    "    legend=alt.Legend(orient='none', legendX=1100, legendY=480)),\n",
+    "    tooltip=[\"primary_type\", alt.Tooltip('count(primary_type)', title='count')]\n",
+    ").transform_filter(\n",
+    "    brush\n",
+    ").properties(\n",
+    "    title='Distribution of crime types per district',\n",
+    "    width=1000,\n",
+    "    height=600)\n",
+    "\n",
+    "alt.vconcat(bar & bars).configure_title(\n",
     "    fontSize=16,\n",
     "    font='Arial',\n",
     "    color='black',\n",
     "    anchor='start'\n",
     ").configure_axis(grid=False\n",
-    ").configure_view(strokeOpacity=0)\n",
-    "\n",
-    "\n",
-    "\n",
-    "chart"
+    ").configure_view(strokeOpacity=0)\n"
    ]
   },
   {
@@ -814,7 +846,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "This graph shows again which district is the most violent. "
+    "In this graph we can see how the different types of crime are distributet in the districts. For example there were 2271 thefts in District 1."
    ]
   },
   {
@@ -825,6 +857,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -832,11 +865,11 @@
     "\n",
     "In this section you'll include a summary of what you have learned about your (research) question along with (statistical) arguments supporting your conclusions.\n",
     "\n",
-    "In addition, discuss the limitations of your analysis and provide suggestions on ways the analysis could be improved.\n",
+    "In addition, discuss the limitations of your analysis and provide suggestions on ways the analysis could be improved. (Hendrik)\n",
     "\n",
-    "Any potential issues pertaining to the reliability and validity of your data and appropriateness of the statistical analysis should also be discussed here.\n",
+    "Any potential issues pertaining to the reliability and validity of your data and appropriateness of the statistical analysis should also be discussed here. (Hendrik)\n",
     "\n",
-    "Lastly, this section will include your recommended action."
+    "Lastly, this section will include your recommended action. (Esad)"
    ]
   },
   {
